--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html{
-    margin: 0px;
+    margin: 0px !important;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -16,8 +17,13 @@ body {
     height: 150px;
 }
 
+input {
+    background-color: #fffefe;
+    border: 1px solid black;
+    border-radius: 3px;
+}
 form {
-    box-shadow: 0px 2px;
+    box-shadow: 0px 2px #dbdadb;
     padding: 50px;
 }
 
@@ -50,7 +56,7 @@ legend {
     padding: 50px;
     padding-top: 120px;
     font-size: larger;
-    font-weight: 600;
+    font-weight: 500;
 }
 
 .name {
@@ -68,9 +74,27 @@ legend {
 .third {
     display: flex;
     gap: 70px;
+    margin-bottom: 10px;
 }
 
 .input {
     display: flex;
     flex-direction: column;
+}
+
+.last {
+    display: flex;
+    flex-direction: column;
+    padding: 50px;
+    gap: 20px;
+}
+button {
+    background-color: #596d47;
+    border: none;
+    color: white;
+    border-radius: 6px;
+    height: 50px;
+    width: 180px;
+    font-family: futura, 'Courier New', Courier, monospace;
+    font-size: 1em;
 }
