--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: odinFont;
+    src: url(./Norse-Bold.otf);
+}
+
 html{
     margin: 0px !important;
     font-family: Arial, Helvetica, sans-serif;
@@ -5,11 +10,12 @@ html{
 
 body {
     display: flex;
+    margin: 0px;
 }
 
 [src="background.jpg"] {
     width: 640px;
-    height: 959px;
+    height: auto;
 }
 
 [src="odin.png"] {
@@ -41,11 +47,20 @@ input {
     height: 20px;
     width: 1    80px;
 }
+
+.left {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    text-align: center;
+}
 .credit {
     display: flex;
     justify-content: center;
     color: antiquewhite;
-    margin-top: -30px;
+    position: absolute;
+    bottom: 1%;
+    width: 100%;
 }
 
 .odin {
@@ -53,10 +68,16 @@ input {
     width: 100%;
     height: 15%;
     color: #fff;
+    position: absolute;
     justify-content: center;
     align-items: center;
-    margin-top: -95%;
     background-color: rgba(0,0,0,.6);
+    top: 25%;
+}
+
+.odin > .text {
+    font-family: odinFont !important;
+    font-size: 5em;
 }
 
 .header {
@@ -96,6 +117,7 @@ input {
     padding: 50px;
     gap: 20px;
 }
+
 button {
     background-color: #596d47;
     border: none;
@@ -108,7 +130,7 @@ button {
 }
 
 .error {
-    border: 1px solid red;
+    border: 2px solid red;
 }
 
 .error-msg {
